2014-01-21  Felix Ingrand  <felix@bobc1>

	* action.c (action_print_term): Strings where printed with
	backslash in message. Cause issues with FAPE.

2013-04-18  Felix Ingrand  <felix@precise>

	* xtop-lev-loop.c (xoprs_top_level_loop): Change the way we
	deregister ourself when halted to avoid hogging the CPU.

2013-04-17  Felix Ingrand  <felix@precise>

	* goprs-main.c (register_other_inputs): Change the gdk code to
	make it work like th Xt code.

2013-04-16  Felix Ingrand  <felix@precise>

	* xoprs-main.c (XtInputId_ready): rewrote completely the code
	which wake and register the xoprs_top_level_loop as a
	WorkProc. Now we instruct Xt to check socket for us (ours and
	external ones), and we register an AppTimeOut of
	main_loop_pool_usec.

2013-04-12  Felix Ingrand  <felix@precise>

	* top-lev.c (remove_external_readfds): Properly reset the
	max_external_readfds.

	* top-lev_f-pub.h: add this file for the "external readfds".

2013-02-26  Felix Ingrand  <felix@precise>

	* oprs-type.c (compare_term): reverse some symbol comparison which
	were intended to be string comparison...
	(compare_term): Fix this function which was not always returning meaningful results...

	* constant.h (COPYRIGHT_STRING): Updated the copyright date.

2013-01-23  Felix Ingrand  <felix@precise>

	* Simplified some HAS_ HAVE_ cpp symbol (directly used the one provided by autoconf).

2013-01-21  Felix Ingrand  <felix@precise>`

	* mp-openprs.pc.in (Libs): Not linking with the proper library... ExtMP should be used.

	* socket_f.h, oprs-pprint.c: removed IGNORE code.

2013-01-18  Felix Ingrand  <felix@precise>

	* database.c (key_term_cmp): Symbol are uniquely present in a
	kernel, comparison can be a pointer one.

2013-01-09  Felix Ingrand  <felix@precise>

	* macro.h (FREE_SLIST): This macro had a weird test... simplified it.

2012-10-12  Felix Ingrand  <felix@lucid>

	* Makefile.am: replace @XXXX@ with ${XXXX}.

2012-10-11  Felix Ingrand  <felix@lucid>
